# actor-system-rs

./: Cargo.toml  README.md
src/: core.rs  lib.rs  main.rs
src/core/: actor.rs  dispatch.rs  util.rs
src/core/actor/: actor_cell.rs  actor_cells.rs  actor_context.rs  actor_path.rs  actor_ref.rs  actor_system.rs  address.rs  child_state.rs  children.rs  children_container.rs  children_refs.rs  death_watch.rs  props.rs  supervisor_strategy.rs  typed_actor_context.rs  user_actor.rs
src/core/actor/actor_cell/: actor_cell_reader.rs  actor_cell_writer.rs
src/core/actor/children/: child_restart_stats.rs  child_state.rs  children_container.rs  children_refs.rs
src/core/dispatch/: any_message.rs  dispatcher.rs  envelope.rs  mailbox.rs  message.rs
src/core/dispatch/mailbox/: mailbox_status.rs  system_mailbox.rs  system_message.rs
src/core/util/: element.rs  queue.rs
src/core/util/queue/: blocking_queue.rs  blocking_queue_test.rs  queue_linkedlist.rs  queue_mpsc.rs  queue_vec.rs
