[package]
name = "simple-actor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
tokio = { version = "1.37.0" , features = ["full"] }
num_enum = "0.7.2"
thiserror = "1.0.61"
tokio-condvar = { version = "0.1.0", optional = false }
log = "0.4.21"
env_logger = "0.11.3"

[dev-dependencies]
serial_test = "3.1.1"